@@ -5,6 +5,7 @@
  - Update copyright years.
 
  [Tags::Output]
+ - Add 'output_encoding' parameter.
  - Add $self argument to callbacks as second argument.
 
 0.10 2020-10-14T00:56:08+02:00
